# nrf9151-connectkit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  sitemap.xml  west.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: documentation.yml  twister-apps-samples.yml  twister-samples.yml
LICENSE/: index.html
applications/ifmcu_firmware/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sample.yaml
applications/ifmcu_firmware/src/: main.c
applications/ifmcu_firmware/src/events/: CMakeLists.txt  Kconfig  cdc_data_event.c  cdc_data_event.h  module_state_event.c  module_state_event.h  peer_conn_event.c  peer_conn_event.h  power_event.c  power_event.h  uart_data_event.c  uart_data_event.h
applications/ifmcu_firmware/src/modules/: CMakeLists.txt  Kconfig  charger.c  led_state.c  led_state.h  power_handler.c  settings.c  uart_handler.c  usb_bulk_commands.c  usb_bulk_interface.c  usb_bulk_msosv2.h  usb_cdc_handler.c  utils.c
applications/modem_shell/: ppp.overlay  prj.conf  sample.yaml
applications/serial_lte_modem/: sample.yaml
blog/: index.html
blog/introducing-interface-mcu/: index.html
contributing/: index.html
docs/: LICENSE.md  getting-started.md  hardware.md  index.md  introduction.md  purchase.md  resources.md  revision-history.md  troubleshooting.md
getting-started/: index.html
hardware/: index.html
introduction/: index.html
purchase/: index.html
resources/: index.html
revision-history/: index.html
scripts/: requirements-docs.txt
search/: search_index.json
troubleshooting/: index.html
(+153 files in other folders)
